--- a/.emacs.files/init.org
+++ b/.emacs.files/init.org
@@ -17,7 +17,7 @@ Setting the TLS version is needed in emacs 26 to be able to pull from the gnu.or
   (setq gnutls-algorithm-priority "NORMAL:-VERS-TLS1.3"
         package-archives '(
                            ("melpa" . "https://melpa.org/packages/")
-                           ("celpa" . "https://celpa.conao3.com/packages/")
+                           ;; ("celpa" . "https://celpa.conao3.com/packages/")
                            ("org"   . "https://orgmode.org/elpa/")
                            ("gnu"   . "https://elpa.gnu.org/packages/")
                            )
@@ -276,16 +276,29 @@ Define how to hanlde automatic bakcups / open files.
 Keep track of recent files.
 
 #+begin_src emacs-lisp :tangle yes
-  (setq recentf-exclude '(
-                          ".*/.emacs.d/.*"
-                          ".*/go/pkg/mod/.*"
-                          ".*/.emacs.tmp/.*"
-                          ".*/node_modules/.*"
-                          ".*/vendor/.*"
-                          ".*\\.el.gz$"
-                          )
-        recentf-save-file "~/.emacs.tmp/recentf")
-  (recentf-mode t)
+  (use-package recentf
+    :custom
+    ;; Define the common patterns we don't want to keep track of.
+    (recentf-exclude '(
+                       ".*/\\.emacs\\.d/.*"
+                       ".*/go/pkg/mod/.*"
+                       ".*/\\.emacs\\.tmp/.*"
+                       ".*/node_modules/.*"
+                       ".*/vendor/.*"
+                       ".*/build/.*"
+                       ".*/tmp/.*"
+                       ".*/\\.tmp/.*"
+                       ".*/out/.*"
+                       ".*\\.el\\.gz$"
+                       ".*/node_modules/.*"
+                       ))
+    (recentf-save-file       "~/.emacs.tmp/recentf") ; Store the recentf list outside the default so we keep the list when we reset ~/.emacs.d.
+    (recentf-auto-cleanup    'never)
+    (recentf-max-menu-items  100)
+    (recentf-max-saved-items 2000)
+    :config
+    (recentf-mode t)
+    )
 #+end_src
 
 ** Disable customize settings outside config file
@@ -321,7 +334,7 @@ Use editor config to handle basic settings like encoding, line lengths, etc.
 See [[file:../.editorconfig][global editorconfig]] for more details.
 
 #+begin_src emacs-lisp :tangle yes
-  (use-package editorconfig :delight
+  (use-package editorconfig
     :init (setq editorconfig--enable-20210221-testing t) ; Enable the testing branch to work around a bug causing too many reloads. Need to be in :init as it must be set before the package loads.
     :config (editorconfig-mode t)
     )
@@ -335,7 +348,7 @@ Enable undo history and store it in =~/.emacs.d.tmp/undo-tree=.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package undo-tree :delight
-    :after hydra
+    ;; :after hydra
     :demand
     :custom
     (undo-tree-history-directory-alist '((".*" . "~/.emacs.tmp/undo-tree")))
@@ -343,22 +356,22 @@ Enable undo history and store it in =~/.emacs.d.tmp/undo-tree=.
     (undo-tree-visualizer-timestamps   t)
     :config
     (global-undo-tree-mode)
-    :bind
-    (:map undo-tree-map
-          ("C-_" . hydra-undo-tree/undo-tree-undo)
-          )
-    :hydra
-    (hydra-undo-tree
-     (:idle 2)
-     "
-  _p_: undo  _n_: redo _s_: save _l_: load   "
-     ("p" undo-tree-undo)
-     ("n" undo-tree-redo)
-     ("s" undo-tree-save-history)
-     ("l" undo-tree-load-history)
-     ("u" undo-tree-visualize "visualize" :color blue)
-     ("q" nil "quit" :color blue)
-     )
+    ;; :bind
+    ;; (:map undo-tree-map
+    ;;       ("C-_" . hydra-undo-tree/undo-tree-undo)
+    ;;       )
+    ;;    :hydra
+    ;;    (hydra-undo-tree
+    ;;     (:idle 2)
+    ;;     "
+    ;;  _p_: undo  _n_: redo _s_: save _l_: load   "
+    ;;     ("p" undo-tree-undo)
+    ;;     ("n" undo-tree-redo)
+    ;;     ("s" undo-tree-save-history)
+    ;;     ("l" undo-tree-load-history)
+    ;;     ("u" undo-tree-visualize "visualize" :color blue)
+    ;;     ("q" nil "quit" :color blue)
+    ;;     )
     )
 #+end_src
 
@@ -398,7 +411,6 @@ Show the available next key bindings.
                                           ;(use-package helm-flex)
   (use-package lsp-mode
     :delight " LSP"
-
     :bind
     (:map lsp-mode-map
           ("C-c e" . lsp-rename)
@@ -426,7 +438,7 @@ Show the available next key bindings.
     (gc-cons-threshold (* 100 1024 1024))     ; Increase emacs' garbage collector limit to 100M. LSP is demanding.
     (read-process-output-max (* 3 1024 1024)) ; Increase the emacs' subprocesses max output to 3MB.
 
-    (lsp-auto-guess-root t)      ; Auto detect project root, based on projectile.
+    ;; (lsp-auto-guess-root t)      ; Auto detect project root, based on projectile.
     (lsp-keep-workspace-alive t) ; Don't auto close workspace.
 
     (lsp-lens-enable t) ; Enable codelenses.
@@ -446,7 +458,7 @@ Show the available next key bindings.
       :custom
       (lsp-ui-sideline-ignore-duplicate t)
 
-      (lsp-ui-doc-enable            nil) ; lsp-ui-doc breaks the mouse resize.
+      ;; (lsp-ui-doc-enable            nil) ; lsp-ui-doc breaks the mouse resize.
       ;; (lsp-ui-doc-include-signature t)
       (lsp-ui-doc-position          'at-point)
       )
@@ -600,7 +612,7 @@ Enable multiple cursors support.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package multiple-cursors
-    :after hydra
+    ;; :after hydra
     :bind
     ("C-c h c" . hydra-multiple-cursors/body)
     ("M-n"     . mc/mark-next-like-this)        ; Add new cursor with matching region.
@@ -611,34 +623,34 @@ Enable multiple cursors support.
     (:map mc/keymap
           ("C-y" . yank)
           )
-    :hydra
-    (hydra-multiple-cursors
-     (:hint nil)
-     "
-   Up^^             Down^^           Miscellaneous           % 2(mc/num-cursors) cursor%s(if (> (mc/num-cursors) 1) \"s\" \"\")
-  ------------------------------------------------------------------
-   [_p_]   Next     [_n_]   Next     [_l_] Edit lines  [_0_] Insert numbers
-   [_P_]   Skip     [_N_]   Skip     [_a_] Mark all    [_A_] Insert letters
-   [_M-p_] Unmark   [_M-n_] Unmark   [_s_] Search      [_q_] Quit
-   [_|_] Align with input CHAR       [Click] Cursor at point"
-     ("l"   mc/edit-lines :exit t)
-     ("a"   mc/mark-all-like-this :exit t)
-     ("n"   mc/mark-next-like-this)
-     ("N"   mc/skip-to-next-like-this)
-     ("M-n" mc/unmark-next-like-this)
-     ("p"   mc/mark-previous-like-this)
-     ("P"   mc/skip-to-previous-like-this)
-     ("M-p" mc/unmark-previous-like-this)
-     ("|"   mc/vertical-align)
-     ("s"   mc/mark-all-in-region-regexp :exit t)
-     ("0"   mc/insert-numbers :exit t)
-     ("A"   mc/insert-letters :exit t)
-     ("<mouse-1>" mc/add-cursor-on-click)
-     ;; Help with click recognition in this hydra
-     ("<down-mouse-1>" ignore)
-     ("<drag-mouse-1>" ignore)
-     ("q" nil)
-     )
+    ;;   :hydra
+    ;;   (hydra-multiple-cursors
+    ;;    (:hint nil)
+    ;;    "
+    ;;  Up^^             Down^^           Miscellaneous           % 2(mc/num-cursors) cursor%s(if (> (mc/num-cursors) 1) \"s\" \"\")
+    ;; ------------------------------------------------------------------
+    ;;  [_p_]   Next     [_n_]   Next     [_l_] Edit lines  [_0_] Insert numbers
+    ;;  [_P_]   Skip     [_N_]   Skip     [_a_] Mark all    [_A_] Insert letters
+    ;;  [_M-p_] Unmark   [_M-n_] Unmark   [_s_] Search      [_q_] Quit
+    ;;  [_|_] Align with input CHAR       [Click] Cursor at point"
+    ;;    ("l"   mc/edit-lines :exit t)
+    ;;    ("a"   mc/mark-all-like-this :exit t)
+    ;;    ("n"   mc/mark-next-like-this)
+    ;;    ("N"   mc/skip-to-next-like-this)
+    ;;    ("M-n" mc/unmark-next-like-this)
+    ;;    ("p"   mc/mark-previous-like-this)
+    ;;    ("P"   mc/skip-to-previous-like-this)
+    ;;    ("M-p" mc/unmark-previous-like-this)
+    ;;    ("|"   mc/vertical-align)
+    ;;    ("s"   mc/mark-all-in-region-regexp :exit t)
+    ;;    ("0"   mc/insert-numbers :exit t)
+    ;;    ("A"   mc/insert-letters :exit t)
+    ;;    ("<mouse-1>" mc/add-cursor-on-click)
+    ;;    ;; Help with click recognition in this hydra
+    ;;    ("<down-mouse-1>" ignore)
+    ;;    ("<drag-mouse-1>" ignore)
+    ;;    ("q" nil)
+    ;;    )
     )
 #+end_src
 
@@ -648,21 +660,19 @@ Enable multiple cursors support.
 Install and enable the theme.
 
 #+begin_src emacs-lisp :tangle yes
-  ;; (use-package monokai-theme     :config (load-theme 'monokai t))
+  (use-package monokai-theme     :config (load-theme 'monokai t))
   ;; (use-package darkokai-theme    :config (load-theme 'darkokai t))
   ;; (use-package monokai-pro-theme :config (load-theme 'monokai t))
   ;; (use-package gruvbox-theme     :config (load-theme 'gruvbox t))
   ;; (use-package gruvbox-theme     :config (load-theme 'gruvbox-dark-hard t))
 
-  (use-package nord-theme
-  :config
-  (unless (daemonp)
-    (load-theme 'nord t))
-  :hook
-  (server-after-make-frame . (lambda () (load-theme 'nord t)))
-  )
-
-
+  ;; (use-package nord-theme
+  ;; :config
+  ;; (unless (daemonp)
+  ;;   (load-theme 'nord t))
+  ;; :hook
+  ;; (server-after-make-frame . (lambda () (load-theme 'nord t)))
+  ;; )
 #+end_src
 
 In terminal mode, use a full size vertical bar for splits.
@@ -795,52 +805,57 @@ TODO: Cleanup shellcheck and document the related packages.
 #+begin_src emacs-lisp :tangle yes
   (use-package flycheck
     :after nvm ; flycheck needs various binaries from npm to setup js/ts linters.
-    :ensure-system-package shellcheck
+    :preface
+    ;; Add buffer local Flycheck checkers after LSP for different major modes.
+    ;; From: https://github.com/flycheck/flycheck/issues/1762#issuecomment-749789589
+    (defvar-local creack/flycheck-local-cache nil)
+    (defun creack/flycheck-local-checker-get (fn checker property)
+      ;; Only check the buffer local cache for the LSP checker, otherwise we get
+      ;; infinite loops.
+      (if
+          (eq checker 'lsp)
+          (or
+           (alist-get property creack/flycheck-local-cache)
+           (funcall fn checker property)
+           )
+        (funcall fn checker property)
+        )
+      )
     :custom
     (flycheck-check-syntax-automatically '(save mode-enabled))
-    ;; NOTE: Disabled in favor of flycheck-popup-tip.
-    ;; :bind
-    ;; ("C-c <up>"   . flycheck-next-error)     ; Ctrl-c up   to go to next error.
-    ;; ("C-c <down>" . flycheck-previous-error) ; Ctrl-c down to go to previous error.
-    :init
-    ;; From https://www.flycheck.org/en/28/_downloads/flycheck.html (search for "shellcheck").
-    (flycheck-define-checker sh-shellcheck ; Create a custom checker for shellcheck.
-      "A shell script syntax and style checker using Shellcheck."
-      :command ("shellcheck" "-f" "checkstyle" "-s" (eval (symbol-name sh-shell)) source)
-      :modes sh-mode
-      :error-parser flycheck-parse-checkstyle)
-    :hook
-    (sh-mode . flycheck-mode)                                  ; Enable flycheck in sh-mode.
+    :config
+    (advice-add 'flycheck-checker-get
+                :around 'creack/flycheck-local-checker-get)
     )
 #+end_src
 
-
 #+begin_src emacs-lisp :tangle yes
   (use-package flycheck-popup-tip
-    :after (flycheck hydra)
+    :after (flycheck)
     :config
     (flycheck-popup-tip-mode t)
     :bind
     (:map flycheck-mode-map
-          ("C-c <up>"   . hydra-flycheck/flycheck-tip-cycle)         ; Ctrl-c up   to go to next error.
-          ("C-c <down>" . hydra-flycheck/flycheck-tip-cycle-reverse) ; Ctrl-c down to go to previous error.
+          ("C-c <up>"   . flycheck-tip-cycle)         ; Ctrl-c up   to go to next error.
+          ("C-c <down>" . flycheck-tip-cycle-reverse) ; Ctrl-c down to go to previous error.
           ("C-c C-n"    . flycheck-tip-cycle)
           ("C-c C-p"    . flycheck-tip-cycle-reverse)
+          ("C-c l"      . flycheck-list-errors)
           )
-    ("C-c h f" . hydra-flycheck/body)
-    :hydra
-    (hydra-flycheck
-     (:pre (flycheck-projectile-list-errors)
-           :post (quit-windows-on "*Project errors*")
-           :hint nil)
-     "Errors"
-     ("f" flycheck-error-list-set-filter "Filter")
-     ("j" flycheck-tip-cycle "Next")
-     ("k" flycheck-tip-cycle-reverse "Previous")
-     ("gg" flycheck-first-error "First")
-     ("G" (progn (goto-char (point-max)) (flycheck-previous-error)) "Last")
-     ("q" nil)
-     )
+    ;; ("C-c h f" . hydra-flycheck/body)
+    ;; :hydra
+    ;; (hydra-flycheck
+    ;;  (:pre (flycheck-list-errors)
+    ;;        :post (quit-windows-on "*Flycheck errors*")
+    ;;        :hint nil)
+    ;;  "Errors"
+    ;;  ("f" flycheck-error-list-set-filter "Filter")
+    ;;  ("j" flycheck-tip-cycle "Next")
+    ;;  ("k" flycheck-tip-cycle-reverse "Previous")
+    ;;  ("gg" flycheck-first-error "First")
+    ;;  ("G" (progn (goto-char (point-max)) (flycheck-previous-error)) "Last")
+    ;;  ("q" nil)
+    ;;  )
     )
 #+end_src
 
@@ -849,7 +864,6 @@ TODO: Cleanup shellcheck and document the related packages.
     :after (projectile flycheck)
     )
 #+end_src
-
 
 ** Snippets
 
@@ -890,12 +904,38 @@ Common config file formats.
     )
 #+end_src
 
-JSON/Yaml.
+JSON.
 
 #+begin_src emacs-lisp :tangle yes
-  (use-package json-mode :defer)
-  (use-package yaml-mode :defer
-    :hook (yaml-mode . display-line-numbers-mode)
+  (use-package json-mode
+    :hook
+    (json-mode . (lambda() (editorconfig-apply)))
+    (json-mode . lsp)
+    )
+#+end_src
+
+YAML
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package yaml-mode
+    :after (nvm) ; Load after nvm to maek sure we have the YAML LSP binary.
+    :config
+    (use-package flycheck-yamllint
+      :after (flycheck)
+      :ensure-system-package
+      (yamllint . "pip3 install yamllint")
+      :config
+      (flycheck-yamllint-setup)
+      :hook
+      (yaml-mode . flycheck-mode)
+      (lsp-managed-mode . (lambda () (when (derived-mode-p 'yaml-mode)
+                                       (setq creack/flycheck-local-cache '((next-checkers . (yaml-yamllint))))
+                                       )
+                            ))
+      )
+    :hook
+    (yaml-mode . display-line-numbers-mode)
+    (yaml-mode . lsp)
     )
 #+end_src
 
@@ -948,7 +988,6 @@ Use =grip= for live preview in browser.
     :mode ("\\.puml\\'" "\\.uml\\'" "\\.mermaid\\'")
     )
 #+end_src
-
 
 ** Makefile
 
@@ -1013,9 +1052,9 @@ Use =nvm= to manage the node version.
      (tsserver                   . "npm install --global tide")
      (prettier                   . "npm install --global prettier prettier-plugin-jsdoc")
      (eslint                     . "npm install --global eslint eslint-plugin-jest eslint-plugin-prettier eslint-plugin-jsdoc eslint-formatter-gitlab @babel/core @babel/eslint-parser @babel/plugin-proposal-class-properties")
-     ;; Other language servers, to be tested.
      (yaml-language-server       . "npm install --global yaml-language-server")
      (bash-language-server       . "npm install --global bash-language-server")
+     ;; Other language servers, to be tested.
      (html-languageserver        . "npm install --global vscode-html-languageserver-bin")
      (vscode-json-languageserver . "npm install --global vscode-json-languageserver")
 
@@ -1025,7 +1064,7 @@ Use =nvm= to manage the node version.
      (jsdoc             . "npm install --global jsdoc jsdoc-mermaid jsdoc-tsimport-plugin tsd-jsdoc tui-jsdoc-template")
      (nodemon           . "npm install --global nodemon")
      (create-react-app  . "npm install --global create-react-app")
-     (openapi           . "npm install --global @redocly/openapi")
+     (openapi           . "npm install --global @redocly/openapi-cli")
      (redoc-cli         . "npm install --global redoc-cli")
      )
 
@@ -1038,7 +1077,7 @@ TODO: Document this.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package tide
-    :after (nvm web-mode typescript-mode company flycheck prettier)
+    :after (nvm web-mode company flycheck prettier)
     :bind
     (:map tide-mode-map
           ([C-down-mouse-1] . mouse-drag-region)
@@ -1051,30 +1090,78 @@ TODO: Document this.
           ([remap xref-find-definitions] . tide-jump-to-definition)
           ([remap xref-find-references]  . tide-references)
           )
+    :preface
+    (defun creack/tide-save-hooks ()
+      (when (eq major-mode 'web-mode)
+        (tide-format-before-save)
+        (prettier-prettify)
+        )
+      (when (eq major-mode 'typescript-mode)
+        (tide-format-before-save)
+        (prettier-prettify)
+        )
+      )
     :config
-    (flycheck-add-next-checker 'tsx-tide 'javascript-eslint 'append)
-    (flycheck-add-next-checker 'jsx-tide 'javascript-eslint 'append)
+    (flycheck-add-next-checker 'typescript-tide 'javascript-eslint 'append)
+    (flycheck-add-next-checker 'tsx-tide        'javascript-eslint 'append)
+    (flycheck-add-next-checker 'jsx-tide        'javascript-eslint 'append)
     :custom
     (tide-completion-detailed t)
     (tide-project-cleanup-delay 3600)
     :hook
-    (web-mode    . tide-setup)                ; Start with web-mode.
-    (tide-mode   . flycheck-mode)             ; Enable flycheck.
-    (tide-mode   . prettier-mode)
-    (before-save . tide-format-before-save)   ; NOTE: tide-format-before-save checks that we are in tide-mode, so it is safe to hook to the global 'before-save.
+    (web-mode         . tide-setup)                ; Start with web-mode.
+    (tide-mode        . flycheck-mode)             ; Enable Flycheck.
+    (tide-mode        . prettier-mode)             ; Enable Prettier.
+    (tide-mode        . tide-hl-identifier-mode)   ; Enable identifier highlight.
+    (before-save      . creack/tide-save-hooks)    ; Before-save hook.
     )
 
   (use-package typescript-mode
-    :after nvm
+    :after (nvm flycheck prettier)
+    :preface
+    (defun creack/tide-save-hooks ()
+      (when (eq major-mode 'typescript-mode)
+        (tide-format-before-save)
+        (prettier-prettify)
+        )
+      )
+    (defun creack/typescript-prettify-save ()
+      (interactive)
+      (prettier-prettify)
+      (save-buffer)
+      )
+    :bind
+    (:map typescript-mode-map
+          ("C-c f"   . creack/typescript-prettify-save)
+          )
+    ;; :hook
+    ;; (typescript-mode . lsp)
+    :hook
+    (typescript-mode .
+                     (lambda()
+                       (tide-setup)
+                       (flycheck-add-next-checker 'typescript-tide 'javascript-eslint 'append))
+                     )
+    (tide-mode . flycheck-mode)                 ; Enable Flycheck.
+    (tide-mode . prettier-mode)                 ; Enable Prettier.
+    (typescript-mode . tide-hl-identifier-mode) ; Enable identifier highlight.
+    (before-save     . creack/tide-save-hooks)  ; Before-save hook.
     )
 
   (use-package web-mode
     :after flycheck
-    :mode "\\.js$" "\\.jsx$" "\\.ts$" "\\.tsx$"
+    :mode "\\.js$" "\\.jsx$" "\\.tsx$"
+    :preface
+    (defun creack/web-prettify-save ()
+      (interactive)
+      (prettier-prettify)
+      (save-buffer)
+      )
     :bind
     (:map web-mode-map
           ("C-c C-l" . display-line-numbers-mode)
           ([mouse-2] . web-mode-fold-or-unfold)
+          ("C-c f"   . creack/web-prettify-save)
           )
     :custom
     ;; TODO: Document this.
@@ -1092,14 +1179,26 @@ TODO: Document this.
     :config
     (flycheck-add-mode 'typescript-tslint 'web-mode)
     (flycheck-add-mode 'javascript-eslint 'web-mode)
+
     :hook
-    (web-mode    . tide-setup)
+    ;;(web-mode . lsp)
+     (web-mode . tide-mode)
     )
 
-  (use-package prettier :delight
+  (use-package emacs
+    :disabled
+    :preface
+    (defun creack/lsp-register-eslint ()
+      (flycheck-add-next-checker 'lsp 'javascript-eslint 'append)
+      )
+    :hook
+    (lsp-after-open . creack/lsp-register-eslint)
+    )
+
+  (use-package prettier
     :after nvm
-    ;:config
-    ;(global-prettier-mode t)
+                                          ;:config
+                                          ;(global-prettier-mode t)
     )
 #+end_src
 
@@ -1121,7 +1220,7 @@ Go setup.
       "Save any unsaved buffers and compile."
       (interactive)
       (save-some-buffers t)
-      (compile "sh -c 'go build -o /tmp/a.out && /tmp/a.out'")
+      (compile "sh -c 'go build -tags local -o /tmp/a.out && /tmp/a.out'")
       )
     (defun creack/go-save-and-go-generate()
       (interactive)
@@ -1145,11 +1244,12 @@ Go setup.
       (compile "go test -v -failfast -cover -coverprofile=/tmp/coverprofile -covermode=count")
       )
     (defun creack/go-load-coverage()
+      (interactive)
       (go-coverage "/tmp/coverprofile")
       )
 
     ;; LSP before-save hook.
-    (defun creack/lsp-go-install-save-hooks ()
+    (defun creack/lsp-go-save-hooks ()
       (when (eq major-mode 'go-mode)
         (lsp-format-buffer)
         (lsp-organize-imports)
@@ -1193,6 +1293,8 @@ Go setup.
     (lsp-go-links-in-hover   nil)
     ;; (lsp-go-use-placeholders t)
     (lsp-go-use-gofumpt      t)
+    (lsp-register-custom-settings
+     '(("gopls.completeUnimported" . t)))
 
     :custom ; Go-mode settings.
     (godoc-reuse-buffer t)         ; Use a single buffer for godoc instead of one per call.
@@ -1202,12 +1304,41 @@ Go setup.
     :hook
     (go-dot-mod-mode . lsp) ; Load LSP.
     (go-mode         . lsp) ; Load LSP.
-    (before-save     . creack/lsp-go-install-save-hooks) ; Use LSP to format / manage imports.
+    (before-save     . creack/lsp-go-save-hooks) ; Use LSP to format / manage imports.
 
     :hook
     (go-mode . projectile-mode) ; Enable projectile.
-    (go-mode . flycheck-mode)   ; Enable Flycheck.
     (go-mode . yas-minor-mode)  ; Enable yas.
+
+    :hook ; Enable Flycheck and configure the checkers.
+    (go-mode . flycheck-mode)
+    (lsp-managed-mode . (lambda () (when (derived-mode-p 'go-mode)
+                                     (setq creack/flycheck-local-cache '((next-checkers . (golangci-lint))))
+                                     )
+                          ))
+    )
+#+end_src
+
+** TODO Shell
+#+begin_src emacs-lisp :tangle yes
+  (use-package sh-mode :ensure nil
+    :after (flycheck nvm) ; Depend on nvm to make sure we have the Bash LSP binary.
+    :ensure-system-package shellcheck
+    :init
+    ;; From https://www.flycheck.org/en/28/_downloads/flycheck.html (search for "shellcheck").
+    (flycheck-define-checker sh-shellcheck ; Create a custom checker for shellcheck.
+      "A shell script syntax and style checker using Shellcheck."
+      :command ("shellcheck" "-f" "checkstyle" "-s" (eval (symbol-name sh-shell)) source)
+      :modes sh-mode
+      :error-parser flycheck-parse-checkstyle
+      )
+    :hook
+    (sh-mode . lsp)
+    (sh-mode . flycheck-mode)
+    (lsp-managed-mode . (lambda () (when (derived-mode-p 'sh-mode)
+                                     (setq creack/flycheck-local-cache '((next-checkers . (sh-shellcheck))))
+                                     ))
+                      )
     )
 #+end_src
 
