--- a/.emacs.files/init.org
+++ b/.emacs.files/init.org
@@ -1029,12 +1029,14 @@ Enable Terraform major mode with snippet support.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package terraform-mode :defer
-    :config
-    (use-package company-terraform
-      :config (company-terraform-init))
+    ;;:disabled
+    ;;:config
+    ;;(use-package company-terraform
+    ;;:config (company-terraform-init))
     :hook
-    (terraform-mode . yas-minor-mode)
+    ;;(terraform-mode . yas-minor-mode)
     (terraform-mode . terraform-format-on-save-mode)
+    (terraform-mode . lsp)
     )
 #+end_src
 
